making it more correct grammaticaly

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         Music
       </h2>
       <p>
-        Since i'm known myself as a human being, i love music, and been learning and practising and mastering this amazing skill since i got my first guitar at 10 years old.
+        Since i'm known myself as a human being, i love music, and been learning, practising and mastering this amazing skill since i got my first guitar at 10 years old.
       </p>
     </div>
     <div>
